--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Babel Transpiler v1.0</h1>
-    <script src="/dist/all.js"></script>
+    <script src="/dist/all.min.js"></script>
 </body>
 </html>
